--- a/app.json
+++ b/app.json
@@ -1,18 +1,19 @@
 {
     "name"			: "AppStore",
-    "version"		: "1.0.0",
+	"version"		: "1.0.0",
     "build"         : 1,
     "namespace"		: "com.github.openqb.AppStore",
 	
 	"supportedOs"   : ["android","ios","osx","windows","linux"],
+    "tags"          : "applications,games,store",
 
-	"category"      : "Applications",
-	"subCategory"   : "Shopping",
-	"genre"   		: "Shopping",
+    "category"      : "Applications",
+    "subCategory"   : "Shopping",
+    "genre"   		: "Shopping",
 	
-    "minQbVersion"     : "1.0.0",
-    "appVariant"       : "APP",
-    "packageVariant"   : "QAP",
+    "minQbVersion"  : "1.0.0",
+    "appVariant"    : "APP",
+    "packageVariant": "QAP",
 
     "description"   : "Open Source application store of Qb",
 
